task5/src/modules/TaskModalCreationEditing/task-modal-creation-editing.module.scss
.error-title {
   .form-input {
      background: #fff1f0;
   }
}
.error {
   position: absolute;
   left: 0;
   bottom: -17px;
   font-size: 11px;
   line-height: 100%;
   color: #eb597b;
   margin-top: 6px;
}

.loading {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
}

.modal-creation-editing {
   position: fixed; // !!!
   z-index: 10;
   top: 50%;
   left: 50%;
   width: 100vw;
   height: 100vh;
   transform: translate(-50%, -50%);

   background-color: rgba(31, 31, 31, 0.5);

   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 10;
}
.close-button-modal {
   position: absolute;
   top: 24px;
   right: 24px;
   border-radius: 6px;
   width: 24px;
   height: 24px;
   background: rgba(244, 246, 248, 0.2);

   &:hover {
      svg {
         path {
            fill: #353535;
         }
      }
   }
   svg {
      width: 10px;
      height: 10px;

      path {
         fill: #ffffff;
         transition: fill 0.3s ease-in-out;
      }
   }
}

.wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: start;
   border-radius: 16px;
   padding: 16px 24px 24px 24px;
   width: 936px;
   // height: 873px;
   background: #ffffff;
   z-index: 2;
}

.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;

   font-family: var(--font-family);
   font-weight: 600;
   font-size: 22px;
   color: #222;

   margin-bottom: 32px;
}

.close-button {
   width: 10px;
   height: 10px;
   &:hover {
      svg {
         path {
            fill: #353535;
         }
      }
   }
   svg {
      path {
         fill: #abbed1;
         transition: fill 0.3s ease-in-out;
      }
   }
}

.form {
   width: 100%;
   font-family: var(--font-family);
   font-weight: 400;
   font-size: 14px;
   line-height: 120%;
   color: #a6a6a6;

   > :nth-child(2) {
      margin-bottom: 32px;
   }
   > :nth-child(3) {
      margin-bottom: 16px;
   }
   > :nth-child(4) {
      margin-bottom: 32px;
   }
   > :nth-child(5) {
      margin-bottom: 32px;
   }

   & input {
      border-radius: 8px;
      padding: 10px 20px;
      width: 100%;
      height: 40px;

      &::placeholder {
         font-family: var(--font-family);
         font-weight: 400;
         font-size: 14px;
         line-height: 120%;
         color: #a6a6a6;
      }
   }

   & label span {
      color: #eb597b;
   }
   & input {
   }
}

.form-title {
   margin-bottom: 36px;
   label {
      color: #a6a6a6;
   }

   & .error {
      & input {
         background-color: #fff1f0;
      }
   }
   & input {
      font-weight: 400;
      font-size: 14px;
      line-height: 143%;
      color: #222;
      background: #f4f6f8;
      margin-top: 6px;
   }
}

.form-selects {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 16px;

   @media (max-width: 1050px) {
      flex-wrap: wrap;
      justify-content: center;
   }
}

.form-select {
   position: relative;
   top: 0;
   left: 0;
   flex: 1 1 285px;
   width: 100%;

   @media (max-width: 768px) {
      flex: 1 1 100%;
   }
   @media (max-width: 1050px) {
      flex-wrap: wrap;
      justify-content: center;
   }

   & div {
      max-width: 100%;
   }
   .form-input {
      font-family: var(--font-family);
      font-weight: 400;
      font-size: 14px;
      line-height: 143%;
      margin-top: 6px;
      background-color: #f4f6f8;

      &:focus {
         color: #222;
      }
      &:not(:focus) {
         color: #222;
      }
   }
}

// Даты
.form-date-start {
   svg path {
      fill: #abbed1;
   }
}

// Описание
.form-description {
   p {
      position: static;
      margin-top: 4px;
      margin-bottom: 10px;
   }
}

// Ссылки
.form-links-files {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 16px;

   font-family: var(--font-family);
   font-weight: 400;
   font-size: 14px;
   line-height: 120%;
   color: #a6a6a6;

   margin-bottom: 32px;

   .form-link-item {
      label {
      }

      input {
         font-size: 16px;
         line-height: 143%;
         color: #222;
         background-color: #f4f6f8;
         margin-top: 6px;
      }
   }
}

// кнопки Создать Добавить Отменить
.actions {
   display: flex;
   gap: 8px;

   button {
      font-weight: 400;
      font-size: 14px;
      line-height: 171%;
      text-align: center;

      border-radius: 6px;
      padding: 10px 22px;
      width: 130px;
      height: 48px;

      transition: opacity 0.3s ease-in-out;

      &:hover {
         opacity: 0.5;
      }
   }

   .btn_blue {
      color: #fff;
      background-color: #3787eb;
   }
   .btn {
      color: #3787eb;
      border: 1px solid #3787eb;
   }
}

